fixed issue with static numbers in transaction and campaign name not showing in balances and also getting transaction by organisation
